zookeeper: use ConcMarkSweepGC & friends