@@ -5,6 +5,7 @@ JVM_OPTS="-Dcom.sun.management.jmxremote.port=17000"
 JVM_OPTS+=" -Dcom.sun.management.jmxremote.authenticate=false"
 JVM_OPTS+=" -Dcom.sun.management.jmxremote.ssl=false"
 JVM_OPTS+=" -Xmx16g"
+JVM_OPTS+=" -server -XX:+UseCompressedOops -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:+CMSScavengeBeforeRemark -XX:+DisableExplicitGC"
 
 # zookeeper files
 MAIN="org.apache.zookeeper.server.quorum.QuorumPeerMain"
